# dtcwt_kernel

./: CMakeLists.txt  Makefile  makefile2
include/: kernel_example.h
kernel_example/: CMakeLists.txt  kernel_example.cc  kernel_example.cu.cc  kernel_example.h.in
tests/: test_kernel.py  test_zero_out.py
zero_out/: CMakeLists.txt  zero_out.cc
